--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/flowerAsset/pngwing 10.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/flowerAsset/pngwing10.ico" type="image/x-icon">
     <title>Flower Shop</title>
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container banner">
+            <div class="banner-text">
+                <h1>Let's make beautiful flowers a part of your life.</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <button>Shop Now</button>
+            </div>
+            <div class="banner-img">
+                <img src="/flowerAsset/pngwing10.png" alt="">
+            </div>
+        </div>
+    </header>
 </body>
 </html>
