added featured flower section

--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/flowerAsset/pngwing10.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/flowerAsset/pngwing10.png" type="image/x-icon">
     <title>Flower Shop</title>
     <link rel="stylesheet" href="/styles/style.css">
 </head>
+
 <body>
     <header>
         <div class="container banner">
             <div class="banner-text">
                 <h1>Let's make beautiful flowers a part of your life.</h1>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                    distribution of letters.</p>
                 <button>Shop Now</button>
             </div>
             <div class="banner-img">
@@ -20,5 +24,65 @@
             </div>
         </div>
     </header>
+
+    <!-- main section -->
+    <main>
+        <section id="featured">
+            <div class="container">
+                <div class="section-heading">
+                    <h2>Our Featured Flowers</h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="section-content">
+                    <div class="flower">
+                        <div class="flower-img one">
+                            <img src="/flowerAsset/pngwing6.png" alt="">
+                        </div>
+                        <p>Pink Flower Tree</p>
+                    </div>
+                    <div class="flower">
+                        <div class="flower-img two">
+                            <img src="/flowerAsset/pngwing8.png" alt="">
+                        </div>
+                        <p>Pink Flower Tree</p>
+                    </div>
+                    <div class="flower">
+                        <div class="flower-img three">
+                            <img src="/flowerAsset/pngwing7.png" alt="">
+                        </div>
+                        <p>Pink Flower Tree</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="delivery-support">
+            <div class="container delivery-bg">
+                <div class="contact">
+                    <div class="delivery">
+                        <img src="/flowerAsset/Group57.png" alt="">
+                    </div>
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="contact">
+                    <div class="delivery">
+                        <img src="/flowerAsset/Group58.png" alt="">
+                    </div>
+                    <p>Fresh Flowers. Local Growers.</p>
+                </div>
+                <div class="contact">
+                    <div class="delivery">
+                        <img src="/flowerAsset/Group59.png" alt="">
+                    </div>
+                    <p>24/7 Free Support.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
