added hot deal, instagram and newsletter section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <div class="container">
                 <div class="section-heading">
                     <h2>Our Featured Flowers</h2>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</p>
                 </div>
                 <div class="section-content">
                     <div class="flower">
@@ -75,6 +76,60 @@
                         <img src="/flowerAsset/Group59.png" alt="">
                     </div>
                     <p>24/7 Free Support.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="hot-deal">
+            <div class="container hot-deal-container">
+                <div class="hot-deal-text">
+                    <h2>Hot Deal ! Sale Up To 25% <span style="color:#E55473; font-size: 32px;">Off</span></h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</p>
+                    <button>Sign Up</button>
+                </div>
+                <div class="hot-deal-img">
+                    <img src="/flowerAsset/pngwing8.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section id="instagram">
+            <div class="container">
+                <div class="section-heading">
+                    <h2>Instagram</h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</p>
+                </div>
+
+                <div class="instagram-images">
+                    <div class="insta-img">
+                        <img src="/flowerAsset/Flower01.png" alt="">
+                    </div>
+                    <div class="insta-img">
+                        <img src="/flowerAsset/Rectangle4.png" alt="">
+                    </div>
+                    <div class="insta-img">
+                        <img src="/flowerAsset/Rectangle5.png" alt="">
+                    </div>
+                    <div class="insta-img">
+                        <img src="/flowerAsset/Rectangle6.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="latest-deals">
+            <div class="container newsletter-bg">
+                <div class="section-heading">
+                    <h2>Get The Latest Deals</h2>
+                    <p>$30 coupon for first shopping</p>
+                </div>
+                <div class="newsletter">
+                    <form>
+                        <input type="email" name="" id="" placeholder="Enter your email here...">
+                        <button>Subscribe</button>
+                    </form>
                 </div>
             </div>
         </section>
