--- a/index.html
+++ b/index.html
@@ -135,8 +135,15 @@
         </section>
     </main>
 
-    <footer>
-
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="container">
+            <div class="footer-content">
+                <h1><span style="color: #E55473;">Flower</span>Shop</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p style="font-size: 16px; color: rgba(255, 255, 255, 40%);">&copy;2020-2023, FlowerShop.com. All rights reserved. </p>
+            </div>
+        </div>
     </footer>
 </body>
 
